Fixed many a problem reported by findbugs.